Added rudimentary barcode scanner functionality

--- a/CHIPSApp/res/values/strings.xml
+++ b/CHIPSApp/res/values/strings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="hello">Hello World, CHIPSAppActivity!</string>
     <string name="app_name">CHIPSApp</string>
+    <string name="scanBarcodeButton">Scan Barcode</string>
 </resources>
