Added XML handling and skeleton search activity

--- a/CHIPSApp/res/values/strings.xml
+++ b/CHIPSApp/res/values/strings.xml
@@ -2,4 +2,5 @@
 <resources>
     <string name="app_name">CHIPSApp</string>
     <string name="scanBarcodeButton">Scan Barcode</string>
+    <string name="searchFoodButton">Search For Food</string>
 </resources>
