Finished XML parsing and added search function

--- a/CHIPSApp/res/values/strings.xml
+++ b/CHIPSApp/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="app_name">CHIPSApp</string>
     <string name="scanBarcodeButton">Scan Barcode</string>
     <string name="searchFoodButton">Search For Food</string>
+    <string name="doSearchFoodButton">Search</string>
 </resources>
