--- a/CHIPSApp/res/values/strings.xml
+++ b/CHIPSApp/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="childFatTitle">Fat</string>
     <string name="childQuantityTitle">Quantity</string>
     <string name="childUpdateQuantityButtonTitle">Update</string>
+    <string name="usernameEditTextTitle">Username</string>
 </resources>
