--- a/CHIPSApp/res/values/strings.xml
+++ b/CHIPSApp/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="loginAutomaticallyCheckboxTitle">Login Automatically</string>
     <string name="barcodeTextViewTitle">Barcode</string>
     <string name="barcodeFormatTextViewTitle">Barcode Format</string>
+    <string name="shopping_group_checkbox_text"></string>
 </resources>
