--- a/CHIPSApp/res/values/strings.xml
+++ b/CHIPSApp/res/values/strings.xml
@@ -33,4 +33,5 @@
     <string name="barcodeTextViewTitle">Barcode</string>
     <string name="barcodeFormatTextViewTitle">Barcode Format</string>
     <string name="shopping_group_checkbox_text"></string>
+    <string name="mealViewDefault">No Meals Found</string>
 </resources>
