--- a/CHIPSApp/res/values/strings.xml
+++ b/CHIPSApp/res/values/strings.xml
@@ -38,4 +38,6 @@
     <string name="weightTitle">Weight</string>
     <string name="expanded_food_title">Nutritional Information (per 100g)</string>
     <string name="childServingSizeTitle">Serving Size</string>
+    <string name="mealNutritionalSummaryTitle">Nutritional Information</string>
+    <string name="mealIngredientsTitle">Ingredients</string>
 </resources>
