Moved edit button to children

--- a/CHIPSApp/res/values/strings.xml
+++ b/CHIPSApp/res/values/strings.xml
@@ -40,4 +40,5 @@
     <string name="childServingSizeTitle">Serving Size</string>
     <string name="mealNutritionalSummaryTitle">Nutritional Information</string>
     <string name="mealIngredientsTitle">Ingredients</string>
+    <string name="mealEditButtonText">Edit</string>
 </resources>
